Fix darkmode toggle overlapping with navbar items

--- a/sass/_darkmode.scss
+++ b/sass/_darkmode.scss
@@ -4,6 +4,10 @@
     top: 1.5rem;
 }
 
+.darkmode-container {
+    width: 20px;
+}
+
 .darkmode > .toggle {
     display: none;
 }
